Using sbt-release 1.0.6 which now support sbt 1.0